--- a/client/src/components/common/largeInscription/LargeInscription.css
+++ b/client/src/components/common/largeInscription/LargeInscription.css
@@ -12,7 +12,7 @@
   text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1000px) {
   .largeInscription {
     font-size: 0.75rem;
   }
