--- a/client/src/components/posts/taskPost/TaskPost.css
+++ b/client/src/components/posts/taskPost/TaskPost.css
@@ -57,7 +57,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1000px) {
   .task-post > .block-div {
     width: calc(90dvw - 20px);
   }
