--- a/client/src/pages/child/ChildDashboard.css
+++ b/client/src/pages/child/ChildDashboard.css
@@ -100,7 +100,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1000px) {
   .childDashboard {
     flex-direction: column;
     margin-inline: 0;
